manifests/nextcloud.yaml
# Source: opendesk-nextcloud/charts/aio/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opendesk-nextcloud-aio
  namespace: tn-openbsw-opendesk
  labels:
    app.kubernetes.io/name: aio
    helm.sh/chart: aio-3.4.0
    app.kubernetes.io/instance: opendesk-nextcloud
    app.kubernetes.io/managed-by: Helm
  annotations:
    intents.otterize.com/service-name: opendesk-nextcloud
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  - name: php
    port: 9000
    targetPort: php
    protocol: TCP
  - name: status
    port: 8081
    targetPort: status
    protocol: TCP
  selector:
    app.kubernetes.io/name: aio
    app.kubernetes.io/instance: opendesk-nextcloud
---
# Source: opendesk-nextcloud/charts/exporter/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opendesk-nextcloud-exporter
  namespace: tn-openbsw-opendesk
  labels:
    app.kubernetes.io/name: exporter
    helm.sh/chart: exporter-3.4.0
    app.kubernetes.io/instance: opendesk-nextcloud
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 9205
    targetPort: metrics
    protocol: TCP
  selector:
    app.kubernetes.io/name: exporter
    app.kubernetes.io/instance: opendesk-nextcloud
---
# Source: opendesk-nextcloud/charts/aio/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opendesk-nextcloud-aio
  namespace: tn-openbsw-opendesk
  labels:
    app.kubernetes.io/name: aio
    helm.sh/chart: aio-3.4.0
    app.kubernetes.io/instance: opendesk-nextcloud
    app.kubernetes.io/managed-by: Helm
  annotations:
    intents.otterize.com/service-name: opendesk-nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: aio
      app.kubernetes.io/instance: opendesk-nextcloud
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configmap: 20ce1bee6f4077107f59a3803c440d9b3f2172b951ddc4fced90b0819758415a
      labels:
        app.kubernetes.io/name: aio
        helm.sh/chart: aio-3.4.0
        app.kubernetes.io/instance: opendesk-nextcloud
        app.kubernetes.io/managed-by: Helm
    spec:
      securityContext:
        fsGroup: 101
        fsGroupChangePolicy: Always
      serviceAccountName: opendesk-nextcloud-aio
      containers:
      - name: aio
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 101
          runAsNonRoot: true
          runAsUser: 101
          seLinuxOptions:
          seccompProfile:
            type: RuntimeDefault
        image:
          registry.opencode.de/bmi/opendesk/components/platform-development/images/opendesk-nextcloud:2.2.2@sha256:90f8e64ef9156c87dbd9befef99c6e3222f87daa393231d393d728c5b64506ee
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
            httpHeaders:
            - name: Host
              value: localhost
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
            httpHeaders:
            - name: Host
              value: localhost
          initialDelaySeconds: 1
          periodSeconds: 1
          timeoutSeconds: 5
          failureThreshold: 10
          successThreshold: 1
        startupProbe:
          httpGet:
            path: /health
            port: 8081
            httpHeaders:
            - name: Host
              value: localhost
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 10
          successThreshold: 1
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        - name: php
          containerPort: 9000
          protocol: TCP
        - name: status
          containerPort: 8081
          protocol: TCP
        resources:
          limits:
            cpu: 99
            memory: 1Gi
          requests:
            cpu: 0.1
            memory: 512Mi
        volumeMounts:
        - name: nextcloud-config
          mountPath: /var/www/html/config
        - name: nextcloud-data
          mountPath: /var/nextcloud/data
        - name: nextcloud-tmp
          mountPath: /tmp
        - name: nginx-config
          mountPath: /etc/nginx/conf.d
        - name: nginx-tmp
          mountPath: /var/cache/nginx/
        - name: run
          mountPath: /var/run/
      volumes:
      - name: nextcloud-data
        emptyDir: {}
      - name: nextcloud-tmp
        emptyDir: {}
      - name: nginx-tmp
        emptyDir: {}
      - name: run
        emptyDir: {}
      - name: nextcloud-config
        emptyDir:
          medium: Memory
          sizeLimit: 5Mi
      - name: nginx-config
        emptyDir:
          medium: Memory
          sizeLimit: 5Mi
---
# Source: opendesk-nextcloud/charts/exporter/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opendesk-nextcloud-exporter
  namespace: tn-openbsw-opendesk
  labels:
    app.kubernetes.io/name: exporter
    helm.sh/chart: exporter-3.4.0
    app.kubernetes.io/instance: opendesk-nextcloud
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: exporter
      app.kubernetes.io/instance: opendesk-nextcloud
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/configmap: 614cec74e25da6ae59051a15248ffb9cce958acedb91240f2817fd703e66909a
      labels:
        app.kubernetes.io/name: exporter
        helm.sh/chart: exporter-3.4.0
        app.kubernetes.io/instance: opendesk-nextcloud
        app.kubernetes.io/managed-by: Helm
    spec:
      securityContext:
        fsGroup: 65532
        fsGroupChangePolicy: Always
      serviceAccountName: opendesk-nextcloud-exporter
      containers:
      - name: exporter
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: true
          runAsGroup: 65532
          runAsNonRoot: true
          runAsUser: 65532
          seLinuxOptions:
          seccompProfile:
            type: RuntimeDefault
        image:
          registry.opencode.de/bmi/opendesk/components/platform-development/images/opendesk-nextcloud-exporter:1.0.1@sha256:63e63c7420e37d3989fa0ffdbcf18a07b2a603ab9b2a849c2e7e44342dd82af0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          tcpSocket:
            port: 9205
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 2
          failureThreshold: 3
          successThreshold: 1
        readinessProbe:
          tcpSocket:
            port: 9205
          initialDelaySeconds: 1
          periodSeconds: 1
          timeoutSeconds: 5
          failureThreshold: 10
          successThreshold: 1
        startupProbe:
          tcpSocket:
            port: 9205
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 10
          successThreshold: 1
        ports:
        - name: metrics
          containerPort: 9205
          protocol: TCP
        resources:
          limits:
            cpu: 99
            memory: 128Mi
          requests:
            cpu: 0.1
            memory: 32Mi
        volumeMounts:
      volumes:
---
# Source: opendesk-nextcloud/charts/aio/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opendesk-nextcloud-aio
  labels:
    app.kubernetes.io/name: aio
    helm.sh/chart: aio-3.4.0
    app.kubernetes.io/instance: opendesk-nextcloud
    app.kubernetes.io/managed-by: Helm
  annotations:
    intents.otterize.com/service-name: opendesk-nextcloud
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
    nginx.ingress.kubernetes.io/proxy-read-timeout: '600'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '600'
    nginx.org/client-max-body-size: 100M
    nginx.org/proxy-read-timeout: 600s
    nginx.org/proxy-send-timeout: 600s
spec:
  tls:
  - hosts:
    - files.opendesk.apps.digilab.network
    secretName: opendesk-certificates-tls
  rules:
  - host: files.opendesk.apps.digilab.network
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opendesk-nextcloud-aio
            port:
              name: http
